objects/DMAPP__DM_Strategy_Map_Node__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>DM_Strategy_Map_Nodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__DM_Strategy_Map__c</fullName>
        <label>Strategy Map</label>
        <referenceTo>DMAPP__DM_Strategy_Map__c</referenceTo>
        <relationshipName>DM_Strategy_Map_Nodes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Long_Description__c</fullName>
        <label>Long Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__New_Node_Type__c</fullName>
        <label>New Node Type</label>
        <picklist>
            <picklistValues>
                <fullName>Goal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pressure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obstacle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Node_Type__c</fullName>
        <label>Node Type</label>
        <picklist>
            <picklistValues>
                <fullName>Goal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Driver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Note__c</fullName>
        <label>Note</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Short_Description__c</fullName>
        <label>Short Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Smart_Node__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Smart Node</label>
        <referenceTo>DMAPP__Insight_Smart_Node__c</referenceTo>
        <relationshipName>Insight_Strategy_Nodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Sort_Order__c</fullName>
        <defaultValue>1000000</defaultValue>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Strategy Map Node</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategy Map Nodes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>